basic fashion blog part 2, a few issues 1) aligning 2) main and sidebar width 3) navigation bar background box size

--- a/lesson3/labs/fashion_blog_part1/style.css
+++ b/lesson3/labs/fashion_blog_part1/style.css
@@ -1,33 +1,107 @@
+/* 
+Project Name: Fashion blog part2
+Client: Your Client
+Author: MinJung Kim
+Developer @GA in NYC
+*/
+
+
+/******************************************
+/* SETUP                   
+/*******************************************/
+
+/* Box Model Hack */
+* {
+     -moz-box-sizing: border-box; /* Firexfox */
+     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
+     box-sizing: border-box; /* IE */
+}
+
+/* Clear fix hack */
+.clearfix:after {
+     content: ".";
+     display: block;
+     clear: both;
+     visibility: hidden;
+     line-height: 0;
+     height: 0;
+}
+
+.clear {
+	clear: both;
+}
+
+.alignright {
+	float: right; 
+	padding: 0 0 10px 10px; /* note the padding around a right floated image */
+}
+
+.alignleft {
+	float: left; 
+	padding: 0 10px 10px 0; /* note the padding around a left floated image */
+}
+/*centering*/
+/*.center {
+	position: absolute;
+	left: 50%;
+  	top: 50%;
+}*/
+/******************************************
+/* BASE STYLES                   
+/*******************************************/
+/*template ex
+body {
+     color: #000;
+     font-size: 12px;
+     line-height: 1.4;
+     font-family: Helvetica, Arial, sans-serif;
+}
+*/
 body {
 	font-family: "Lato", sans-serif;
-	color: black;
-	width: 900px;
-	margin: 0 auto;
-	padding: 50px 50px;
+	color: #000;
+	/*width: 900px;*/
+	/*margin: 20px auto;*/
+	/*padding: 50px 50px;*/
 }
 
-/*#container {
-	width: 900px;
-	margin: 0 auto;
-	padding: 50px 50px;
-}*/
+/******************************************
+/* LAYOUT                   
+/*******************************************/
 
-p {
-	font-size: 18px;
-	line-height: 30px;
+/* Center the container */
+#container {
+	width: 1000px;
+	margin: auto;
 }
-
-h1 a:link,
-h2 a:link,
-h4 a:link, 
-footer a {
-	text-decoration: none;
-}
-
+/*header*/
 h1 a {
 	color: #ff0000;
 	font-size: 60px;
 	font-weight: lighter;
+	float: left;
+	margin-right: 20px;
+}
+header h2 {
+	font-size: 30px;
+	color: #c7c7c7;
+}
+
+nav a {
+	font-size: 20px;
+	background-color: #000;
+	color: #d9d9d9;
+	padding: 20px;
+	margin: 0 auto;
+}
+
+/*articles*/
+#main {
+	float: left;
+	width: 70%;
+}
+ {
+	width: 70%;
 }
 
 h2 {
@@ -44,22 +118,32 @@ h3 {
 	color: #cccccc;
 	margin-bottom: 5px;
 }
-
+h4 {
+	color: #ff0000;
+	font-weight: bolder;
+}
 h4 a {
 	float: right;
 	color: #ff0000;
 	font-weight: bolder;
-	/*padding: 20px 0px 20px 0px;*/
 }
 
-nav a {
-	font-size: 25px;
-	color: #d9d9d9;
-	margin: 0px 20px 60px 0px;
-	float: left;
+/*aside style*/
+aside {
+	float: right;
+	width: 30%;
 }
 
-li {
+aside ul {
+	color: #cccccc;
+}
+
+aside li span {
+	color: #ff0000;
+}
+
+/*footer style*/
+footer li {
 	list-style: none;
 }
 
@@ -68,8 +152,7 @@ footer a {
 	font-size: 18px;
 	float: left;
 	padding: 0 10px;
-	/*margin: 0px 20px 60px 0px;*/
-	border-right: solid 1px #ff0000;
+	border-right: solid 1px #cccccc;
 }
 
 /*to get rid of the last border right*/
@@ -80,10 +163,20 @@ footer li:last-child a {
 footer ul {
 	padding-left: 0;
 }
+
+/******************************************
+/* ADDITIONAL STYLES                   
+/*******************************************/
+
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+}
+
 .headline {
 	font-size: 40px;
 	color: black;
-	margin: 5px 0px 20px 0px;
 }
 
 .firstLetter { 
@@ -97,23 +190,5 @@ footer ul {
 }
 
 hr {
-	margin: 80px 0px 50px 0px; 
+	margin: 20px; 
 }
-
-/*footer a {
-	text-decoration: none;
-}*/
-/*a:hover, a:visited, a:link, a:active
-{
-    text-decoration: none;
-}*/
-/* Clear fix hack
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
-}
-*/
